# python_dev_questionnaire

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build-dev.sh  build-prod.sh  build.sh  compose.dev.yaml  compose.yaml  docker-entrypoint-dev.sh  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: github-ci.yaml
python_dev_questionnaire/: asgi.py  conftest.py  custom_mixins.py  factories.py  localization_texts.py  settings.py  tests.py  urls.py  views.py  wsgi.py
python_dev_questionnaire/categories/: admin.py  apps.py  models.py  views.py
python_dev_questionnaire/categories/migrations/: 0001_initial.py
python_dev_questionnaire/labels/: admin.py  apps.py  models.py  views.py
python_dev_questionnaire/labels/migrations/: 0001_initial.py
python_dev_questionnaire/questions/: admin.py  apps.py  filters.py  models.py  tests.py  urls.py  views.py
python_dev_questionnaire/questions/migrations/: 0001_initial.py
python_dev_questionnaire/static/css/: bs_overrides.css
python_dev_questionnaire/templates/: about.html  login.html  materials.html  profile.html  register.html
python_dev_questionnaire/templates/errors/: 404.html  500.html
python_dev_questionnaire/templates/layouts/: base.html  footer.html  header.html
python_dev_questionnaire/templates/questions/: question_detail.html  questions_index.html
python_dev_questionnaire/templates/users/: delete.html  password_update.html  profile.html  register.html  update.html
python_dev_questionnaire/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
python_dev_questionnaire/users/migrations/: 0001_initial.py
